// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form handleClick: should render a different snapshot if advancedSearch is true 1`] = `
<Form
  data={
    Array [
      Object {
        "address1": "201 Waterfront St",
        "attire": "business casual",
        "city": "Oxon Hill",
        "genre": "Steak,American,Contemporary,Seafood,Cafe",
        "hours": "Open Daily 5:30 PM-10:00 PM",
        "id": "f223fdd0-4adc-423e-9747-980a66c256ca",
        "lat": "38.782098",
        "long": "-77.017492",
        "name": "Old Hickory Steakhouse",
        "state": "MD",
        "tags": "Social,Food and Dining,Restaurants,Steakhouses",
        "telephone": "(301) 965-4000",
        "website": "http://www.gaylordnational.com",
        "zip": "20745",
      },
      Object {
        "address1": "303 E Main St",
        "attire": "business casual",
        "city": "Aspen",
        "genre": "Japanese,Sushi,Asian,Contemporary,Seafood",
        "hours": "Open Daily 5:30 PM-9:00 PM",
        "id": "00b35e1a-82b1-4988-b8b9-6df826db2818",
        "lat": "39.190723",
        "long": "-106.82031",
        "name": "Matsuhisa",
        "state": "CO",
        "tags": "Social,Food and Dining,Restaurants,Japanese,Social,Food and Dining,Restaurants,Sushi",
        "telephone": "(970) 544-6628",
        "website": "http://www.matsuhisaaspen.com",
        "zip": "81611",
      },
      Object {
        "address1": "108 3rd St NE",
        "attire": "business casual",
        "city": "Charlottesville",
        "genre": "French,European,Cafe,Continental,American",
        "hours": "Mon-Thu 5:30 PM-9:00 PM; Fri-Sat 5:30 PM-10:00 PM",
        "id": "0f41a3d0-0641-4eef-b7fd-706f083cf0d5",
        "lat": "38.030526",
        "long": "-78.479785",
        "name": "Fleurie Restaurant",
        "state": "VA",
        "tags": "Social,Food and Dining,Restaurants,French",
        "telephone": "(434) 971-7800",
        "website": "http://www.fleurierestaurant.com",
        "zip": "22902",
      },
      Object {
        "address1": "500 Crescent Ct",
        "attire": "business casual",
        "city": "Dallas",
        "genre": "Steak,American",
        "hours": "Mon-Thu 11:00 AM-10:00 PM; Fri 11:00 AM-11:00 PM; Sat 5:00 PM-11:00 PM; Sun 5:00 PM-9:00 PM",
        "id": "0b4bfe46-3e60-4de4-82ba-2dd8e5d46b56",
        "lat": "32.794749",
        "long": "-96.804099",
        "name": "The Capital Grille",
        "state": "TX",
        "tags": "Social,Food and Dining,Restaurants,Steakhouses,Social,Food and Dining,Restaurants,American",
        "telephone": "(214) 303-0500",
        "website": "http://www.thecapitalgrille.com",
        "zip": "75201",
      },
      Object {
        "address1": "8731 International Dr",
        "attire": "Casual",
        "city": "Orlando",
        "genre": "Seafood,International,American,Oysters,Cafe",
        "hours": "Mon-Fri 4:00 PM-10:00 PM; Sat-Sun 2:00 PM-10:00 PM",
        "id": "cd273a24-f8de-44f6-8add-028e22229293",
        "lat": "28.43897",
        "long": "-81.470707",
        "name": "Boston Lobster Feast",
        "state": "FL",
        "tags": "Social,Food and Dining,Restaurants,Seafood,Social,Food and Dining,Restaurants,American",
        "telephone": "(407) 248-8606",
        "website": "http://www.bostonlobsterfeast.com",
        "zip": "32819",
      },
    ]
  }
  resetResults={[MockFunction]}
  results={
    Array [
      Object {
        "address1": "8731 International Dr",
        "attire": "Casual",
        "city": "Orlando",
        "genre": "Seafood,International,American,Oysters,Cafe",
        "hours": "Mon-Fri 4:00 PM-10:00 PM; Sat-Sun 2:00 PM-10:00 PM",
        "id": "cd273a24-f8de-44f6-8add-028e22229293",
        "lat": "28.43897",
        "long": "-81.470707",
        "name": "Boston Lobster Feast",
        "state": "FL",
        "tags": "Social,Food and Dining,Restaurants,Seafood,Social,Food and Dining,Restaurants,American",
        "telephone": "(407) 248-8606",
        "website": "http://www.bostonlobsterfeast.com",
        "zip": "32819",
      },
      Object {
        "address1": "108 3rd St NE",
        "attire": "business casual",
        "city": "Charlottesville",
        "genre": "French,European,Cafe,Continental,American",
        "hours": "Mon-Thu 5:30 PM-9:00 PM; Fri-Sat 5:30 PM-10:00 PM",
        "id": "0f41a3d0-0641-4eef-b7fd-706f083cf0d5",
        "lat": "38.030526",
        "long": "-78.479785",
        "name": "Fleurie Restaurant",
        "state": "VA",
        "tags": "Social,Food and Dining,Restaurants,French",
        "telephone": "(434) 971-7800",
        "website": "http://www.fleurierestaurant.com",
        "zip": "22902",
      },
      Object {
        "address1": "303 E Main St",
        "attire": "business casual",
        "city": "Aspen",
        "genre": "Japanese,Sushi,Asian,Contemporary,Seafood",
        "hours": "Open Daily 5:30 PM-9:00 PM",
        "id": "00b35e1a-82b1-4988-b8b9-6df826db2818",
        "lat": "39.190723",
        "long": "-106.82031",
        "name": "Matsuhisa",
        "state": "CO",
        "tags": "Social,Food and Dining,Restaurants,Japanese,Social,Food and Dining,Restaurants,Sushi",
        "telephone": "(970) 544-6628",
        "website": "http://www.matsuhisaaspen.com",
        "zip": "81611",
      },
      Object {
        "address1": "201 Waterfront St",
        "attire": "business casual",
        "city": "Oxon Hill",
        "genre": "Steak,American,Contemporary,Seafood,Cafe",
        "hours": "Open Daily 5:30 PM-10:00 PM",
        "id": "f223fdd0-4adc-423e-9747-980a66c256ca",
        "lat": "38.782098",
        "long": "-77.017492",
        "name": "Old Hickory Steakhouse",
        "state": "MD",
        "tags": "Social,Food and Dining,Restaurants,Steakhouses",
        "telephone": "(301) 965-4000",
        "website": "http://www.gaylordnational.com",
        "zip": "20745",
      },
      Object {
        "address1": "500 Crescent Ct",
        "attire": "business casual",
        "city": "Dallas",
        "genre": "Steak,American",
        "hours": "Mon-Thu 11:00 AM-10:00 PM; Fri 11:00 AM-11:00 PM; Sat 5:00 PM-11:00 PM; Sun 5:00 PM-9:00 PM",
        "id": "0b4bfe46-3e60-4de4-82ba-2dd8e5d46b56",
        "lat": "32.794749",
        "long": "-96.804099",
        "name": "The Capital Grille",
        "state": "TX",
        "tags": "Social,Food and Dining,Restaurants,Steakhouses,Social,Food and Dining,Restaurants,American",
        "telephone": "(214) 303-0500",
        "website": "http://www.thecapitalgrille.com",
        "zip": "75201",
      },
    ]
  }
  setFilteredResults={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "query": "",
            "results": Array [
              Object {
                "address1": "8731 International Dr",
                "attire": "Casual",
                "city": "Orlando",
                "genre": "Seafood,International,American,Oysters,Cafe",
                "hours": "Mon-Fri 4:00 PM-10:00 PM; Sat-Sun 2:00 PM-10:00 PM",
                "id": "cd273a24-f8de-44f6-8add-028e22229293",
                "lat": "28.43897",
                "long": "-81.470707",
                "name": "Boston Lobster Feast",
                "state": "FL",
                "tags": "Social,Food and Dining,Restaurants,Seafood,Social,Food and Dining,Restaurants,American",
                "telephone": "(407) 248-8606",
                "website": "http://www.bostonlobsterfeast.com",
                "zip": "32819",
              },
              Object {
                "address1": "108 3rd St NE",
                "attire": "business casual",
                "city": "Charlottesville",
                "genre": "French,European,Cafe,Continental,American",
                "hours": "Mon-Thu 5:30 PM-9:00 PM; Fri-Sat 5:30 PM-10:00 PM",
                "id": "0f41a3d0-0641-4eef-b7fd-706f083cf0d5",
                "lat": "38.030526",
                "long": "-78.479785",
                "name": "Fleurie Restaurant",
                "state": "VA",
                "tags": "Social,Food and Dining,Restaurants,French",
                "telephone": "(434) 971-7800",
                "website": "http://www.fleurierestaurant.com",
                "zip": "22902",
              },
              Object {
                "address1": "303 E Main St",
                "attire": "business casual",
                "city": "Aspen",
                "genre": "Japanese,Sushi,Asian,Contemporary,Seafood",
                "hours": "Open Daily 5:30 PM-9:00 PM",
                "id": "00b35e1a-82b1-4988-b8b9-6df826db2818",
                "lat": "39.190723",
                "long": "-106.82031",
                "name": "Matsuhisa",
                "state": "CO",
                "tags": "Social,Food and Dining,Restaurants,Japanese,Social,Food and Dining,Restaurants,Sushi",
                "telephone": "(970) 544-6628",
                "website": "http://www.matsuhisaaspen.com",
                "zip": "81611",
              },
              Object {
                "address1": "201 Waterfront St",
                "attire": "business casual",
                "city": "Oxon Hill",
                "genre": "Steak,American,Contemporary,Seafood,Cafe",
                "hours": "Open Daily 5:30 PM-10:00 PM",
                "id": "f223fdd0-4adc-423e-9747-980a66c256ca",
                "lat": "38.782098",
                "long": "-77.017492",
                "name": "Old Hickory Steakhouse",
                "state": "MD",
                "tags": "Social,Food and Dining,Restaurants,Steakhouses",
                "telephone": "(301) 965-4000",
                "website": "http://www.gaylordnational.com",
                "zip": "20745",
              },
              Object {
                "address1": "500 Crescent Ct",
                "attire": "business casual",
                "city": "Dallas",
                "genre": "Steak,American",
                "hours": "Mon-Thu 11:00 AM-10:00 PM; Fri 11:00 AM-11:00 PM; Sat 5:00 PM-11:00 PM; Sun 5:00 PM-9:00 PM",
                "id": "0b4bfe46-3e60-4de4-82ba-2dd8e5d46b56",
                "lat": "32.794749",
                "long": "-96.804099",
                "name": "The Capital Grille",
                "state": "TX",
                "tags": "Social,Food and Dining,Restaurants,Steakhouses,Social,Food and Dining,Restaurants,American",
                "telephone": "(214) 303-0500",
                "website": "http://www.thecapitalgrille.com",
                "zip": "75201",
              },
            ],
            "selectedState": null,
          },
        ],
        Array [
          Object {
            "query": "",
            "results": Array [
              Object {
                "address1": "8731 International Dr",
                "attire": "Casual",
                "city": "Orlando",
                "genre": "Seafood,International,American,Oysters,Cafe",
                "hours": "Mon-Fri 4:00 PM-10:00 PM; Sat-Sun 2:00 PM-10:00 PM",
                "id": "cd273a24-f8de-44f6-8add-028e22229293",
                "lat": "28.43897",
                "long": "-81.470707",
                "name": "Boston Lobster Feast",
                "state": "FL",
                "tags": "Social,Food and Dining,Restaurants,Seafood,Social,Food and Dining,Restaurants,American",
                "telephone": "(407) 248-8606",
                "website": "http://www.bostonlobsterfeast.com",
                "zip": "32819",
              },
              Object {
                "address1": "108 3rd St NE",
                "attire": "business casual",
                "city": "Charlottesville",
                "genre": "French,European,Cafe,Continental,American",
                "hours": "Mon-Thu 5:30 PM-9:00 PM; Fri-Sat 5:30 PM-10:00 PM",
                "id": "0f41a3d0-0641-4eef-b7fd-706f083cf0d5",
                "lat": "38.030526",
                "long": "-78.479785",
                "name": "Fleurie Restaurant",
                "state": "VA",
                "tags": "Social,Food and Dining,Restaurants,French",
                "telephone": "(434) 971-7800",
                "website": "http://www.fleurierestaurant.com",
                "zip": "22902",
              },
              Object {
                "address1": "303 E Main St",
                "attire": "business casual",
                "city": "Aspen",
                "genre": "Japanese,Sushi,Asian,Contemporary,Seafood",
                "hours": "Open Daily 5:30 PM-9:00 PM",
                "id": "00b35e1a-82b1-4988-b8b9-6df826db2818",
                "lat": "39.190723",
                "long": "-106.82031",
                "name": "Matsuhisa",
                "state": "CO",
                "tags": "Social,Food and Dining,Restaurants,Japanese,Social,Food and Dining,Restaurants,Sushi",
                "telephone": "(970) 544-6628",
                "website": "http://www.matsuhisaaspen.com",
                "zip": "81611",
              },
              Object {
                "address1": "201 Waterfront St",
                "attire": "business casual",
                "city": "Oxon Hill",
                "genre": "Steak,American,Contemporary,Seafood,Cafe",
                "hours": "Open Daily 5:30 PM-10:00 PM",
                "id": "f223fdd0-4adc-423e-9747-980a66c256ca",
                "lat": "38.782098",
                "long": "-77.017492",
                "name": "Old Hickory Steakhouse",
                "state": "MD",
                "tags": "Social,Food and Dining,Restaurants,Steakhouses",
                "telephone": "(301) 965-4000",
                "website": "http://www.gaylordnational.com",
                "zip": "20745",
              },
              Object {
                "address1": "500 Crescent Ct",
                "attire": "business casual",
                "city": "Dallas",
                "genre": "Steak,American",
                "hours": "Mon-Thu 11:00 AM-10:00 PM; Fri 11:00 AM-11:00 PM; Sat 5:00 PM-11:00 PM; Sun 5:00 PM-9:00 PM",
                "id": "0b4bfe46-3e60-4de4-82ba-2dd8e5d46b56",
                "lat": "32.794749",
                "long": "-96.804099",
                "name": "The Capital Grille",
                "state": "TX",
                "tags": "Social,Food and Dining,Restaurants,Steakhouses,Social,Food and Dining,Restaurants,American",
                "telephone": "(214) 303-0500",
                "website": "http://www.thecapitalgrille.com",
                "zip": "75201",
              },
            ],
            "selectedState": null,
          },
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
>
  <form
    className="main-form"
  >
    <section
      className="regular-search-section"
    >
      <div
        className="select-state-div"
      >
        <label
          htmlFor="select-state"
        >
          Filter by State
        </label>
        <select
          id="select-state"
          name="select"
          onChange={[Function]}
        >
          <option
            id={0}
            key=""
            value={0}
          />
          <option
            id={1}
            key="Alabama"
            value={1}
          >
            Alabama
          </option>
          <option
            id={2}
            key="Alaska"
            value={2}
          >
            Alaska
          </option>
          <option
            id={3}
            key="Arizona"
            value={3}
          >
            Arizona
          </option>
          <option
            id={4}
            key="Arkansas"
            value={4}
          >
            Arkansas
          </option>
          <option
            id={5}
            key="California"
            value={5}
          >
            California
          </option>
          <option
            id={6}
            key="Colorado"
            value={6}
          >
            Colorado
          </option>
          <option
            id={7}
            key="Connecticut"
            value={7}
          >
            Connecticut
          </option>
          <option
            id={8}
            key="Delaware"
            value={8}
          >
            Delaware
          </option>
          <option
            id={9}
            key="Florida"
            value={9}
          >
            Florida
          </option>
          <option
            id={10}
            key="Georgia"
            value={10}
          >
            Georgia
          </option>
          <option
            id={11}
            key="Hawaii"
            value={11}
          >
            Hawaii
          </option>
          <option
            id={12}
            key="Idaho"
            value={12}
          >
            Idaho
          </option>
          <option
            id={13}
            key="Illinois"
            value={13}
          >
            Illinois
          </option>
          <option
            id={14}
            key="Indiana"
            value={14}
          >
            Indiana
          </option>
          <option
            id={15}
            key="Iowa"
            value={15}
          >
            Iowa
          </option>
          <option
            id={16}
            key="Kansas"
            value={16}
          >
            Kansas
          </option>
          <option
            id={17}
            key="Kentucky"
            value={17}
          >
            Kentucky
          </option>
          <option
            id={18}
            key="Louisiana"
            value={18}
          >
            Louisiana
          </option>
          <option
            id={19}
            key="Maine"
            value={19}
          >
            Maine
          </option>
          <option
            id={20}
            key="Maryland"
            value={20}
          >
            Maryland
          </option>
          <option
            id={21}
            key="Massachusetts"
            value={21}
          >
            Massachusetts
          </option>
          <option
            id={22}
            key="Michigan"
            value={22}
          >
            Michigan
          </option>
          <option
            id={23}
            key="Minnesota"
            value={23}
          >
            Minnesota
          </option>
          <option
            id={24}
            key="Mississippi"
            value={24}
          >
            Mississippi
          </option>
          <option
            id={25}
            key="Missouri"
            value={25}
          >
            Missouri
          </option>
          <option
            id={26}
            key="Montana"
            value={26}
          >
            Montana
          </option>
          <option
            id={27}
            key="Nebraska"
            value={27}
          >
            Nebraska
          </option>
          <option
            id={28}
            key="Nevada"
            value={28}
          >
            Nevada
          </option>
          <option
            id={29}
            key="New Hampshire"
            value={29}
          >
            New Hampshire
          </option>
          <option
            id={30}
            key="New Jersey"
            value={30}
          >
            New Jersey
          </option>
          <option
            id={31}
            key="New Mexico"
            value={31}
          >
            New Mexico
          </option>
          <option
            id={32}
            key="New York"
            value={32}
          >
            New York
          </option>
          <option
            id={33}
            key="North Carolina"
            value={33}
          >
            North Carolina
          </option>
          <option
            id={34}
            key="North Dakota"
            value={34}
          >
            North Dakota
          </option>
          <option
            id={35}
            key="Ohio"
            value={35}
          >
            Ohio
          </option>
          <option
            id={36}
            key="Oklahoma"
            value={36}
          >
            Oklahoma
          </option>
          <option
            id={37}
            key="Oregon"
            value={37}
          >
            Oregon
          </option>
          <option
            id={38}
            key="Pennsylvania"
            value={38}
          >
            Pennsylvania
          </option>
          <option
            id={39}
            key="Rhode Island"
            value={39}
          >
            Rhode Island
          </option>
          <option
            id={40}
            key="South Carolina"
            value={40}
          >
            South Carolina
          </option>
          <option
            id={41}
            key="South Dakota"
            value={41}
          >
            South Dakota
          </option>
          <option
            id={42}
            key="Tennessee"
            value={42}
          >
            Tennessee
          </option>
          <option
            id={43}
            key="Texas"
            value={43}
          >
            Texas
          </option>
          <option
            id={44}
            key="Utah"
            value={44}
          >
            Utah
          </option>
          <option
            id={45}
            key="Vermont"
            value={45}
          >
            Vermont
          </option>
          <option
            id={46}
            key="Virginia"
            value={46}
          >
            Virginia
          </option>
          <option
            id={47}
            key="Washington"
            value={47}
          >
            Washington
          </option>
          <option
            id={48}
            key="West Virginia"
            value={48}
          >
            West Virginia
          </option>
          <option
            id={49}
            key="Wisconsin"
            value={49}
          >
            Wisconsin
          </option>
          <option
            id={50}
            key="Wyoming"
            value={50}
          >
            Wyoming
          </option>
        </select>
      </div>
      <div
        className="search-bar-div"
      >
        <input
          id="search-bar"
          onChange={[Function]}
          placeholder="Search Bar"
          type="text"
          value=""
        />
        <button
          onClick={[Function]}
          type="button"
        >
          X
        </button>
        <button
          type="button"
        >
          Search
        </button>
      </div>
    </section>
    <section
      className="advanced-search-section"
    >
      <div
        className="advanced-search-div"
      >
        <h3>
          Advanced Search
        </h3>
        <button
          id="advanced-search-btn"
          onClick={[Function]}
          type="button"
        >
          -
        </button>
      </div>
      <div
        className="filters-fieldsets-div exposed"
      >
        <div
          className="fieldset-form-div"
          key="Food-fieldset-div"
        >
          <fieldset>
            <legend>
              Food
            </legend>
            <div
              className="checkboxes-div"
            >
              <div
                className="checkbox-div"
                key="Kosher-div"
              >
                <input
                  id="Kosher"
                  key="Kosher"
                  name="Food"
                  type="checkbox"
                  value="Kosher"
                />
                <label
                  htmlFor="Kosher"
                  key="Kosher-label"
                >
                  Kosher
                </label>
              </div>
              <div
                className="checkbox-div"
                key="Oysters-div"
              >
                <input
                  id="Oysters"
                  key="Oysters"
                  name="Food"
                  type="checkbox"
                  value="Oysters"
                />
                <label
                  htmlFor="Oysters"
                  key="Oysters-label"
                >
                  Oysters
                </label>
              </div>
              <div
                className="checkbox-div"
                key="Pasta-div"
              >
                <input
                  id="Pasta"
                  key="Pasta"
                  name="Food"
                  type="checkbox"
                  value="Pasta"
                />
                <label
                  htmlFor="Pasta"
                  key="Pasta-label"
                >
                  Pasta
                </label>
              </div>
              <div
                className="checkbox-div"
                key="Sandwiches-div"
              >
                <input
                  id="Sandwiches"
                  key="Sandwiches"
                  name="Food"
                  type="checkbox"
                  value="Sandwiches"
                />
                <label
                  htmlFor="Sandwiches"
                  key="Sandwiches-label"
                >
                  Sandwiches
                </label>
              </div>
              <div
                className="checkbox-div"
                key="Seafood-div"
              >
                <input
                  id="Seafood"
                  key="Seafood"
                  name="Food"
                  type="checkbox"
                  value="Seafood"
                />
                <label
                  htmlFor="Seafood"
                  key="Seafood-label"
                >
                  Seafood
                </label>
              </div>
              <div
                className="checkbox-div"
                key="Steak-div"
              >
                <input
                  id="Steak"
                  key="Steak"
                  name="Food"
                  type="checkbox"
                  value="Steak"
                />
                <label
                  htmlFor="Steak"
                  key="Steak-label"
                >
                  Steak
                </label>
              </div>
              <div
                className="checkbox-div"
                key="Sushi-div"
              >
                <input
                  id="Sushi"
                  key="Sushi"
                  name="Food"
                  type="checkbox"
                  value="Sushi"
                />
                <label
                  htmlFor="Sushi"
                  key="Sushi-label"
                >
                  Sushi
                </label>
              </div>
              <div
                className="checkbox-div"
                key="Vegetarian-div"
              >
                <input
                  id="Vegetarian"
                  key="Vegetarian"
                  name="Food"
                  type="checkbox"
                  value="Vegetarian"
                />
                <label
                  htmlFor="Vegetarian"
                  key="Vegetarian-label"
                >
                  Vegetarian
                </label>
              </div>
            </div>
          </fieldset>
        </div>
        <div
          className="fieldset-form-div"
          key="Types-fieldset-div"
        >
          <fieldset>
            <legend>
              Types
            </legend>
            <div
              className="checkboxes-div"
            >
              <div
                className="checkbox-div"
                key="Bakery-div"
              >
                <input
                  id="Bakery"
                  key="Bakery"
                  name="Types"
                  type="checkbox"
                  value="Bakery"
                />
                <label
                  htmlFor="Bakery"
                  key="Bakery-label"
                >
                  Bakery
                </label>
              </div>
              <div
                className="checkbox-div"
                key="Bistro-div"
              >
                <input
                  id="Bistro"
                  key="Bistro"
                  name="Types"
                  type="checkbox"
                  value="Bistro"
                />
                <label
                  htmlFor="Bistro"
                  key="Bistro-label"
                >
                  Bistro
                </label>
              </div>
              <div
                className="checkbox-div"
                key="Cafe-div"
              >
                <input
                  id="Cafe"
                  key="Cafe"
                  name="Types"
                  type="checkbox"
                  value="Cafe"
                />
                <label
                  htmlFor="Cafe"
                  key="Cafe-label"
                >
                  Cafe
                </label>
              </div>
              <div
                className="checkbox-div"
                key="Grill-div"
              >
                <input
                  id="Grill"
                  key="Grill"
                  name="Types"
                  type="checkbox"
                  value="Grill"
                />
                <label
                  htmlFor="Grill"
                  key="Grill-label"
                >
                  Grill
                </label>
              </div>
            </div>
          </fieldset>
        </div>
        <div
          className="fieldset-form-div"
          key="Styles-fieldset-div"
        >
          <fieldset>
            <legend>
              Styles
            </legend>
            <div
              className="checkboxes-div"
            >
              <div
                className="checkbox-div"
                key="Fusion-div"
              >
                <input
                  id="Fusion"
                  key="Fusion"
                  name="Styles"
                  type="checkbox"
                  value="Fusion"
                />
                <label
                  htmlFor="Fusion"
                  key="Fusion-label"
                >
                  Fusion
                </label>
              </div>
              <div
                className="checkbox-div"
                key="Traditional-div"
              >
                <input
                  id="Traditional"
                  key="Traditional"
                  name="Styles"
                  type="checkbox"
                  value="Traditional"
                />
                <label
                  htmlFor="Traditional"
                  key="Traditional-label"
                >
                  Traditional
                </label>
              </div>
              <div
                className="checkbox-div"
                key="Contemporary-div"
              >
                <input
                  id="Contemporary"
                  key="Contemporary"
                  name="Styles"
                  type="checkbox"
                  value="Contemporary"
                />
                <label
                  htmlFor="Contemporary"
                  key="Contemporary-label"
                >
                  Contemporary
                </label>
              </div>
              <div
                className="checkbox-div"
                key="Eclectic-div"
              >
                <input
                  id="Eclectic"
                  key="Eclectic"
                  name="Styles"
                  type="checkbox"
                  value="Eclectic"
                />
                <label
                  htmlFor="Eclectic"
                  key="Eclectic-label"
                >
                  Eclectic
                </label>
              </div>
            </div>
          </fieldset>
        </div>
        <div
          className="fieldset-form-div"
          key="Drinks-fieldset-div"
        >
          <fieldset>
            <legend>
              Drinks
            </legend>
            <div
              className="checkboxes-div"
            >
              <div
                className="checkbox-div"
                key="Coffee-div"
              >
                <input
                  id="Coffee"
                  key="Coffee"
                  name="Drinks"
                  type="checkbox"
                  value="Coffee"
                />
                <label
                  htmlFor="Coffee"
                  key="Coffee-label"
                >
                  Coffee
                </label>
              </div>
              <div
                className="checkbox-div"
                key="Tea-div"
              >
                <input
                  id="Tea"
                  key="Tea"
                  name="Drinks"
                  type="checkbox"
                  value="Tea"
                />
                <label
                  htmlFor="Tea"
                  key="Tea-label"
                >
                  Tea
                </label>
              </div>
            </div>
          </fieldset>
        </div>
        <div
          className="fieldset-form-div"
          key="Atttire-fieldset-div"
        >
          <fieldset>
            <legend>
              Atttire
            </legend>
            <div
              className="checkboxes-div"
            >
              <div
                className="checkbox-div"
                key="casual-div"
              >
                <input
                  id="casual"
                  key="casual"
                  name="Atttire"
                  type="checkbox"
                  value="casual"
                />
                <label
                  htmlFor="casual"
                  key="casual-label"
                >
                  casual
                </label>
              </div>
              <div
                className="checkbox-div"
                key="business casual-div"
              >
                <input
                  id="business casual"
                  key="business casual"
                  name="Atttire"
                  type="checkbox"
                  value="business casual"
                />
                <label
                  htmlFor="business casual"
                  key="business casual-label"
                >
                  business casual
                </label>
              </div>
              <div
                className="checkbox-div"
                key="smart casual-div"
              >
                <input
                  id="smart casual"
                  key="smart casual"
                  name="Atttire"
                  type="checkbox"
                  value="smart casual"
                />
                <label
                  htmlFor="smart casual"
                  key="smart casual-label"
                >
                  smart casual
                </label>
              </div>
              <div
                className="checkbox-div"
                key="formal-div"
              >
                <input
                  id="formal"
                  key="formal"
                  name="Atttire"
                  type="checkbox"
                  value="formal"
                />
                <label
                  htmlFor="formal"
                  key="formal-label"
                >
                  formal
                </label>
              </div>
            </div>
          </fieldset>
        </div>
      </div>
    </section>
  </form>
</Form>
`;

exports[`Form should render the snapshot 1`] = `
<Form
  data={
    Array [
      Object {
        "address1": "201 Waterfront St",
        "attire": "business casual",
        "city": "Oxon Hill",
        "genre": "Steak,American,Contemporary,Seafood,Cafe",
        "hours": "Open Daily 5:30 PM-10:00 PM",
        "id": "f223fdd0-4adc-423e-9747-980a66c256ca",
        "lat": "38.782098",
        "long": "-77.017492",
        "name": "Old Hickory Steakhouse",
        "state": "MD",
        "tags": "Social,Food and Dining,Restaurants,Steakhouses",
        "telephone": "(301) 965-4000",
        "website": "http://www.gaylordnational.com",
        "zip": "20745",
      },
      Object {
        "address1": "303 E Main St",
        "attire": "business casual",
        "city": "Aspen",
        "genre": "Japanese,Sushi,Asian,Contemporary,Seafood",
        "hours": "Open Daily 5:30 PM-9:00 PM",
        "id": "00b35e1a-82b1-4988-b8b9-6df826db2818",
        "lat": "39.190723",
        "long": "-106.82031",
        "name": "Matsuhisa",
        "state": "CO",
        "tags": "Social,Food and Dining,Restaurants,Japanese,Social,Food and Dining,Restaurants,Sushi",
        "telephone": "(970) 544-6628",
        "website": "http://www.matsuhisaaspen.com",
        "zip": "81611",
      },
      Object {
        "address1": "108 3rd St NE",
        "attire": "business casual",
        "city": "Charlottesville",
        "genre": "French,European,Cafe,Continental,American",
        "hours": "Mon-Thu 5:30 PM-9:00 PM; Fri-Sat 5:30 PM-10:00 PM",
        "id": "0f41a3d0-0641-4eef-b7fd-706f083cf0d5",
        "lat": "38.030526",
        "long": "-78.479785",
        "name": "Fleurie Restaurant",
        "state": "VA",
        "tags": "Social,Food and Dining,Restaurants,French",
        "telephone": "(434) 971-7800",
        "website": "http://www.fleurierestaurant.com",
        "zip": "22902",
      },
      Object {
        "address1": "500 Crescent Ct",
        "attire": "business casual",
        "city": "Dallas",
        "genre": "Steak,American",
        "hours": "Mon-Thu 11:00 AM-10:00 PM; Fri 11:00 AM-11:00 PM; Sat 5:00 PM-11:00 PM; Sun 5:00 PM-9:00 PM",
        "id": "0b4bfe46-3e60-4de4-82ba-2dd8e5d46b56",
        "lat": "32.794749",
        "long": "-96.804099",
        "name": "The Capital Grille",
        "state": "TX",
        "tags": "Social,Food and Dining,Restaurants,Steakhouses,Social,Food and Dining,Restaurants,American",
        "telephone": "(214) 303-0500",
        "website": "http://www.thecapitalgrille.com",
        "zip": "75201",
      },
      Object {
        "address1": "8731 International Dr",
        "attire": "Casual",
        "city": "Orlando",
        "genre": "Seafood,International,American,Oysters,Cafe",
        "hours": "Mon-Fri 4:00 PM-10:00 PM; Sat-Sun 2:00 PM-10:00 PM",
        "id": "cd273a24-f8de-44f6-8add-028e22229293",
        "lat": "28.43897",
        "long": "-81.470707",
        "name": "Boston Lobster Feast",
        "state": "FL",
        "tags": "Social,Food and Dining,Restaurants,Seafood,Social,Food and Dining,Restaurants,American",
        "telephone": "(407) 248-8606",
        "website": "http://www.bostonlobsterfeast.com",
        "zip": "32819",
      },
    ]
  }
  resetResults={[MockFunction]}
  results={
    Array [
      Object {
        "address1": "8731 International Dr",
        "attire": "Casual",
        "city": "Orlando",
        "genre": "Seafood,International,American,Oysters,Cafe",
        "hours": "Mon-Fri 4:00 PM-10:00 PM; Sat-Sun 2:00 PM-10:00 PM",
        "id": "cd273a24-f8de-44f6-8add-028e22229293",
        "lat": "28.43897",
        "long": "-81.470707",
        "name": "Boston Lobster Feast",
        "state": "FL",
        "tags": "Social,Food and Dining,Restaurants,Seafood,Social,Food and Dining,Restaurants,American",
        "telephone": "(407) 248-8606",
        "website": "http://www.bostonlobsterfeast.com",
        "zip": "32819",
      },
      Object {
        "address1": "108 3rd St NE",
        "attire": "business casual",
        "city": "Charlottesville",
        "genre": "French,European,Cafe,Continental,American",
        "hours": "Mon-Thu 5:30 PM-9:00 PM; Fri-Sat 5:30 PM-10:00 PM",
        "id": "0f41a3d0-0641-4eef-b7fd-706f083cf0d5",
        "lat": "38.030526",
        "long": "-78.479785",
        "name": "Fleurie Restaurant",
        "state": "VA",
        "tags": "Social,Food and Dining,Restaurants,French",
        "telephone": "(434) 971-7800",
        "website": "http://www.fleurierestaurant.com",
        "zip": "22902",
      },
      Object {
        "address1": "303 E Main St",
        "attire": "business casual",
        "city": "Aspen",
        "genre": "Japanese,Sushi,Asian,Contemporary,Seafood",
        "hours": "Open Daily 5:30 PM-9:00 PM",
        "id": "00b35e1a-82b1-4988-b8b9-6df826db2818",
        "lat": "39.190723",
        "long": "-106.82031",
        "name": "Matsuhisa",
        "state": "CO",
        "tags": "Social,Food and Dining,Restaurants,Japanese,Social,Food and Dining,Restaurants,Sushi",
        "telephone": "(970) 544-6628",
        "website": "http://www.matsuhisaaspen.com",
        "zip": "81611",
      },
      Object {
        "address1": "201 Waterfront St",
        "attire": "business casual",
        "city": "Oxon Hill",
        "genre": "Steak,American,Contemporary,Seafood,Cafe",
        "hours": "Open Daily 5:30 PM-10:00 PM",
        "id": "f223fdd0-4adc-423e-9747-980a66c256ca",
        "lat": "38.782098",
        "long": "-77.017492",
        "name": "Old Hickory Steakhouse",
        "state": "MD",
        "tags": "Social,Food and Dining,Restaurants,Steakhouses",
        "telephone": "(301) 965-4000",
        "website": "http://www.gaylordnational.com",
        "zip": "20745",
      },
      Object {
        "address1": "500 Crescent Ct",
        "attire": "business casual",
        "city": "Dallas",
        "genre": "Steak,American",
        "hours": "Mon-Thu 11:00 AM-10:00 PM; Fri 11:00 AM-11:00 PM; Sat 5:00 PM-11:00 PM; Sun 5:00 PM-9:00 PM",
        "id": "0b4bfe46-3e60-4de4-82ba-2dd8e5d46b56",
        "lat": "32.794749",
        "long": "-96.804099",
        "name": "The Capital Grille",
        "state": "TX",
        "tags": "Social,Food and Dining,Restaurants,Steakhouses,Social,Food and Dining,Restaurants,American",
        "telephone": "(214) 303-0500",
        "website": "http://www.thecapitalgrille.com",
        "zip": "75201",
      },
    ]
  }
  setFilteredResults={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "query": "",
            "results": Array [
              Object {
                "address1": "8731 International Dr",
                "attire": "Casual",
                "city": "Orlando",
                "genre": "Seafood,International,American,Oysters,Cafe",
                "hours": "Mon-Fri 4:00 PM-10:00 PM; Sat-Sun 2:00 PM-10:00 PM",
                "id": "cd273a24-f8de-44f6-8add-028e22229293",
                "lat": "28.43897",
                "long": "-81.470707",
                "name": "Boston Lobster Feast",
                "state": "FL",
                "tags": "Social,Food and Dining,Restaurants,Seafood,Social,Food and Dining,Restaurants,American",
                "telephone": "(407) 248-8606",
                "website": "http://www.bostonlobsterfeast.com",
                "zip": "32819",
              },
              Object {
                "address1": "108 3rd St NE",
                "attire": "business casual",
                "city": "Charlottesville",
                "genre": "French,European,Cafe,Continental,American",
                "hours": "Mon-Thu 5:30 PM-9:00 PM; Fri-Sat 5:30 PM-10:00 PM",
                "id": "0f41a3d0-0641-4eef-b7fd-706f083cf0d5",
                "lat": "38.030526",
                "long": "-78.479785",
                "name": "Fleurie Restaurant",
                "state": "VA",
                "tags": "Social,Food and Dining,Restaurants,French",
                "telephone": "(434) 971-7800",
                "website": "http://www.fleurierestaurant.com",
                "zip": "22902",
              },
              Object {
                "address1": "303 E Main St",
                "attire": "business casual",
                "city": "Aspen",
                "genre": "Japanese,Sushi,Asian,Contemporary,Seafood",
                "hours": "Open Daily 5:30 PM-9:00 PM",
                "id": "00b35e1a-82b1-4988-b8b9-6df826db2818",
                "lat": "39.190723",
                "long": "-106.82031",
                "name": "Matsuhisa",
                "state": "CO",
                "tags": "Social,Food and Dining,Restaurants,Japanese,Social,Food and Dining,Restaurants,Sushi",
                "telephone": "(970) 544-6628",
                "website": "http://www.matsuhisaaspen.com",
                "zip": "81611",
              },
              Object {
                "address1": "201 Waterfront St",
                "attire": "business casual",
                "city": "Oxon Hill",
                "genre": "Steak,American,Contemporary,Seafood,Cafe",
                "hours": "Open Daily 5:30 PM-10:00 PM",
                "id": "f223fdd0-4adc-423e-9747-980a66c256ca",
                "lat": "38.782098",
                "long": "-77.017492",
                "name": "Old Hickory Steakhouse",
                "state": "MD",
                "tags": "Social,Food and Dining,Restaurants,Steakhouses",
                "telephone": "(301) 965-4000",
                "website": "http://www.gaylordnational.com",
                "zip": "20745",
              },
              Object {
                "address1": "500 Crescent Ct",
                "attire": "business casual",
                "city": "Dallas",
                "genre": "Steak,American",
                "hours": "Mon-Thu 11:00 AM-10:00 PM; Fri 11:00 AM-11:00 PM; Sat 5:00 PM-11:00 PM; Sun 5:00 PM-9:00 PM",
                "id": "0b4bfe46-3e60-4de4-82ba-2dd8e5d46b56",
                "lat": "32.794749",
                "long": "-96.804099",
                "name": "The Capital Grille",
                "state": "TX",
                "tags": "Social,Food and Dining,Restaurants,Steakhouses,Social,Food and Dining,Restaurants,American",
                "telephone": "(214) 303-0500",
                "website": "http://www.thecapitalgrille.com",
                "zip": "75201",
              },
            ],
            "selectedState": null,
          },
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
>
  <form
    className="main-form"
  >
    <section
      className="regular-search-section"
    >
      <div
        className="select-state-div"
      >
        <label
          htmlFor="select-state"
        >
          Filter by State
        </label>
        <select
          id="select-state"
          name="select"
          onChange={[Function]}
        >
          <option
            id={0}
            key=""
            value={0}
          />
          <option
            id={1}
            key="Alabama"
            value={1}
          >
            Alabama
          </option>
          <option
            id={2}
            key="Alaska"
            value={2}
          >
            Alaska
          </option>
          <option
            id={3}
            key="Arizona"
            value={3}
          >
            Arizona
          </option>
          <option
            id={4}
            key="Arkansas"
            value={4}
          >
            Arkansas
          </option>
          <option
            id={5}
            key="California"
            value={5}
          >
            California
          </option>
          <option
            id={6}
            key="Colorado"
            value={6}
          >
            Colorado
          </option>
          <option
            id={7}
            key="Connecticut"
            value={7}
          >
            Connecticut
          </option>
          <option
            id={8}
            key="Delaware"
            value={8}
          >
            Delaware
          </option>
          <option
            id={9}
            key="Florida"
            value={9}
          >
            Florida
          </option>
          <option
            id={10}
            key="Georgia"
            value={10}
          >
            Georgia
          </option>
          <option
            id={11}
            key="Hawaii"
            value={11}
          >
            Hawaii
          </option>
          <option
            id={12}
            key="Idaho"
            value={12}
          >
            Idaho
          </option>
          <option
            id={13}
            key="Illinois"
            value={13}
          >
            Illinois
          </option>
          <option
            id={14}
            key="Indiana"
            value={14}
          >
            Indiana
          </option>
          <option
            id={15}
            key="Iowa"
            value={15}
          >
            Iowa
          </option>
          <option
            id={16}
            key="Kansas"
            value={16}
          >
            Kansas
          </option>
          <option
            id={17}
            key="Kentucky"
            value={17}
          >
            Kentucky
          </option>
          <option
            id={18}
            key="Louisiana"
            value={18}
          >
            Louisiana
          </option>
          <option
            id={19}
            key="Maine"
            value={19}
          >
            Maine
          </option>
          <option
            id={20}
            key="Maryland"
            value={20}
          >
            Maryland
          </option>
          <option
            id={21}
            key="Massachusetts"
            value={21}
          >
            Massachusetts
          </option>
          <option
            id={22}
            key="Michigan"
            value={22}
          >
            Michigan
          </option>
          <option
            id={23}
            key="Minnesota"
            value={23}
          >
            Minnesota
          </option>
          <option
            id={24}
            key="Mississippi"
            value={24}
          >
            Mississippi
          </option>
          <option
            id={25}
            key="Missouri"
            value={25}
          >
            Missouri
          </option>
          <option
            id={26}
            key="Montana"
            value={26}
          >
            Montana
          </option>
          <option
            id={27}
            key="Nebraska"
            value={27}
          >
            Nebraska
          </option>
          <option
            id={28}
            key="Nevada"
            value={28}
          >
            Nevada
          </option>
          <option
            id={29}
            key="New Hampshire"
            value={29}
          >
            New Hampshire
          </option>
          <option
            id={30}
            key="New Jersey"
            value={30}
          >
            New Jersey
          </option>
          <option
            id={31}
            key="New Mexico"
            value={31}
          >
            New Mexico
          </option>
          <option
            id={32}
            key="New York"
            value={32}
          >
            New York
          </option>
          <option
            id={33}
            key="North Carolina"
            value={33}
          >
            North Carolina
          </option>
          <option
            id={34}
            key="North Dakota"
            value={34}
          >
            North Dakota
          </option>
          <option
            id={35}
            key="Ohio"
            value={35}
          >
            Ohio
          </option>
          <option
            id={36}
            key="Oklahoma"
            value={36}
          >
            Oklahoma
          </option>
          <option
            id={37}
            key="Oregon"
            value={37}
          >
            Oregon
          </option>
          <option
            id={38}
            key="Pennsylvania"
            value={38}
          >
            Pennsylvania
          </option>
          <option
            id={39}
            key="Rhode Island"
            value={39}
          >
            Rhode Island
          </option>
          <option
            id={40}
            key="South Carolina"
            value={40}
          >
            South Carolina
          </option>
          <option
            id={41}
            key="South Dakota"
            value={41}
          >
            South Dakota
          </option>
          <option
            id={42}
            key="Tennessee"
            value={42}
          >
            Tennessee
          </option>
          <option
            id={43}
            key="Texas"
            value={43}
          >
            Texas
          </option>
          <option
            id={44}
            key="Utah"
            value={44}
          >
            Utah
          </option>
          <option
            id={45}
            key="Vermont"
            value={45}
          >
            Vermont
          </option>
          <option
            id={46}
            key="Virginia"
            value={46}
          >
            Virginia
          </option>
          <option
            id={47}
            key="Washington"
            value={47}
          >
            Washington
          </option>
          <option
            id={48}
            key="West Virginia"
            value={48}
          >
            West Virginia
          </option>
          <option
            id={49}
            key="Wisconsin"
            value={49}
          >
            Wisconsin
          </option>
          <option
            id={50}
            key="Wyoming"
            value={50}
          >
            Wyoming
          </option>
        </select>
      </div>
      <div
        className="search-bar-div"
      >
        <input
          id="search-bar"
          onChange={[Function]}
          placeholder="Search Bar"
          type="text"
          value=""
        />
        <button
          onClick={[Function]}
          type="button"
        >
          X
        </button>
        <button
          type="button"
        >
          Search
        </button>
      </div>
    </section>
    <section
      className="advanced-search-section"
    >
      <div
        className="advanced-search-div"
      >
        <h3>
          Advanced Search
        </h3>
        <button
          id="advanced-search-btn"
          onClick={[Function]}
          type="button"
        >
          +
        </button>
      </div>
      <div
        className="filters-fieldsets-div"
      />
    </section>
  </form>
</Form>
`;
